controlcenter/control-center-frontend-deployment.yaml
# An example of a Kubernetes configuration for Control Center deployment.
apiVersion: v1
kind: Pod
metadata:
 name: control-center-frontend
 namespace: gridgain-control-center
 labels:
   app: frontend
spec:
 containers:
 - name: frontend-container
   image: gridgain/control-center-frontend:2023.2
   imagePullPolicy: IfNotPresent
   securityContext:
     allowPrivilegeEscalation: false
     readOnlyRootFilesystem: true
   ports:
   - containerPort: 8008
     protocol: TCP
   volumeMounts:
   - mountPath: /etc/nginx/control-center.conf
     name: control-center-config
     subPath: control-center.conf
   - mountPath: /tmp
     name: tmpfs
 volumes:
   - name: tmpfs
     emptyDir: {}
   - name: control-center-config
     configMap:
       name: control-center-config
       items:
       - key: control-center.conf
         path: control-center.conf
