controlcenter/control-center-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gridgain-control-center
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
   - name: tcp-control-center-web
     port: 3000
     protocol: TCP
     targetPort: 3000
