controlcenter/cc-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-control-center-gateway
  namespace: gridgain-control-center
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8008
      name: http
      protocol: HTTP
    hosts:
    - "*"
