controlcenter/cc-istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: control-center-dest-rule
  namespace: gridgain-control-center
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
