controlcenter/cc-istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-control-center-service
  namespace: gridgain-control-center
spec:
  hosts:
  - "*"
  gateways:
  - istio-control-center-gateway
  http:
  - match:
    - gateways:
      port: 80
    - uri:
        prefix: "/controlcenter/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 8008
