controlcenter/control-center-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: default
  namespace: gridgain-control-center
spec:
  hosts:
  - gridgain-control-center.svc.cluster.local
  location: MESH_INTERNAL
  resolution: NONE
  ports:
  - number: 3000
    name: tcp-backend
    protocol: TCP
  - number: 8008
    name: tcp-frontend
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: control-center-gateway
  namespace: gridgain-control-center
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8008
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: control-center-service
  namespace: gridgain-control-center
spec:
  hosts:
  - "*"
  gateways:
  - control-center-gateway
  http:
  - match:
    - gateways:
      port: 80
    - uri:
        prefix: "/controlcenter/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 8008
